# cogito

./: CMakeLists.txt
include/common/: Checks.h  Exception.h
include/linalg/: Matrix.h  Operations.h
include/nn/: Dense.h  Layer.h  LossFunction.h  MeanSquaredError.h  NeuralNetwork.h  NeuralNetwork.tpp  Relu.h  Sigmoid.h
src/: main.cpp
src/linalg/: Matrix.cpp  Operations.cpp
src/nn/: Dense.cpp  MeanSquaredError.cpp  NeuralNetwork.cpp  Relu.cpp  Sigmoid.cpp
tests/: benchmark.txt  test_linalg_operations.cpp  test_matrix_class.cpp  test_matrix_constructors.cpp  test_matrix_operations.cpp  test_matrix_utils.cpp
